fix: row gap in landing

--- a/src/carrefour/pages/Landing/assets/styles.scss
+++ b/src/carrefour/pages/Landing/assets/styles.scss
@@ -13,6 +13,7 @@
     background-size: 500px auto;
   }
   .go-to-game-content {
+    row-gap: inherit;
     display: flex;
     flex-direction: column;
     color: white;
